# hello-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
