[package]
name = "cli-template"
version = "0.1.0"
authors = ["Ida Kenichiro <ida.kenichiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "^0.3.0"
env_logger = "^0.7.1"
exitfailure = "^0.5.1"
failure = "^0.1.6"
indicatif = "^0.13.0"
log = "^0.4.0"
paw = "^1.0.0"
paw-structopt = "^1.0.0"
structopt = "^0.3.5"
